# mdbook-include-rs

./: .gitignore  Cargo.toml  DESIGN.md  README.md  rust-toolchain.toml
.github/workflows/: ci.yml
src/: directive.rs  formatter.rs  lib.rs  main.rs  output.rs  parser.rs  preprocessor.rs
src/extractor/: enum_finder.rs  function_extractor.rs  impl_finder.rs  method_extractor.rs  mod.rs  struct_finder.rs  trait_finder.rs
tests/: mdbook_integration_test.rs  simple_test.rs  test.rs  tests.rs
tests/fixtures/: book.toml  test_file.rs  test_file_with_display_comments.rs
tests/fixtures/src/: chapter_1.md  chapter_2.md  test_file_book.rs
tests/fixtures/src/snapshots/: simple_test__complex_function_body_preprocessor.snap
tests/snapshots/: simple_test__function_body_preprocessor.snap  simple_test__source_file_preprocessor.snap  test__complex_function_body.snap  test__enum.snap  test__function.snap  test__function_body.snap  test__impl.snap  test__relative_path.snap  test__source_file.snap  test__struct.snap  test__trait.snap  test__trait_impl.snap  tests__complex_function_body.snap  tests__enum.snap  tests__function.snap  tests__function_body.snap  tests__function_body_with_display_end_only.snap  tests__function_body_with_display_markers.snap  tests__function_body_with_display_start_only.snap  tests__function_body_without_markers.snap  tests__impl.snap  tests__method_extraction.snap  tests__relative_path.snap  tests__source_file.snap  tests__struct.snap  tests__trait.snap  tests__trait_impl.snap
