[workspace]

[package]
name = "mdbook-include-rs"
version = "0.2.0"
description = "An mdBook preprocessor that includes external Rust source files"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bryncooke/mdbook-include-rs"
readme = "README.md"
keywords = ["mdbook", "preprocessor", "include", "doc", "syntax"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
mdbook = "0.4.47"
syn = { version = "2.0.100", features = ["full", "parsing", "visit", "extra-traits"] }
proc-macro2 = { version = "1.0.94", features = ["span-locations"] }
clap = { version = "4.5.32", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
regex = "1.10"
toml = "0.5"

[dev-dependencies]
insta = "1.39.0"
